welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.error
parotTrouble:3: error: value \ is not a member of Int
	if (hour<7 \ hour>23)
                   ^